# bazel-cross-docker

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
